# ganglia-mod_intel

./: LICENSE  README.md  configure.ac
gmond/: Makefile.am
gmond/modules/: Makefile.am
gmond/modules/conf.d/: intel.conf
gmond/modules/intel/: Makefile.am  mod_intel.c
